assignment-5/Assignment_5/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH


Grammar

    0 $accept: translationUnit $end

    1 constant: integerConstant
    2         | floatingConstant
    3         | ENUMERATION_CONSTANT
    4         | CHARACTER_CONSTANT

    5 postfixExpression: primaryExpression
    6                  | postfixExpression SQBRAOPEN expression SQBRACLOSE
    7                  | postfixExpression ROBRAOPEN ROBRACLOSE
    8                  | postfixExpression ROBRAOPEN argumentExpressionList ROBRACLOSE
    9                  | postfixExpression DOT IDENTIFIER
   10                  | postfixExpression ACC IDENTIFIER
   11                  | postfixExpression INC
   12                  | postfixExpression DEC
   13                  | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list CURBRACLOSE
   14                  | ROBRAOPEN type_name ROBRACLOSE CURBRAOPEN initializer_list COMMA CURBRACLOSE

   15 selectionStatement: IF ROBRAOPEN expression N ROBRACLOSE M statement N
   16                   | IF ROBRAOPEN expression N ROBRACLOSE M statement N ELSE M statement
   17                   | SWITCH ROBRAOPEN expression ROBRACLOSE statement

   18 unaryOperator: AMP
   19              | MUL
   20              | ADD
   21              | SUB
   22              | NEG
   23              | EXCLAIM

   24 castExpression: unaryExpression
   25               | ROBRAOPEN type_name ROBRACLOSE castExpression

   26 multiplicativeExpression: castExpression
   27                         | multiplicativeExpression MUL castExpression
   28                         | multiplicativeExpression DIV castExpression
   29                         | multiplicativeExpression MODULO castExpression

   30 additiveExpression: multiplicativeExpression
   31                   | additiveExpression ADD multiplicativeExpression
   32                   | additiveExpression SUB multiplicativeExpression

   33 shiftExpression: additiveExpression
   34                | shiftExpression SHL additiveExpression
   35                | shiftExpression SHR additiveExpression

   36 declaration_specifiers: storage_class_specifier declaration_specifiers
   37                       | storage_class_specifier
   38                       | type_specifier declaration_specifiers
   39                       | type_specifier
   40                       | TYpeQualifier declaration_specifiers
   41                       | TYpeQualifier
   42                       | functionSpecifier declaration_specifiers
   43                       | functionSpecifier

   44 equalityExpression: relationalExpression
   45                   | equalityExpression EQ relationalExpression
   46                   | equalityExpression NEQ relationalExpression

   47 ANDexpression: equalityExpression
   48              | ANDexpression AMP equalityExpression

   49 exclusiveORexpression: ANDexpression
   50                      | exclusiveORexpression BITXOR ANDexpression

   51 inclusiveORexpression: exclusiveORexpression
   52                      | inclusiveORexpression BITOR exclusiveORexpression

   53 logicalANDexpression: inclusiveORexpression
   54                     | logicalANDexpression N AND M inclusiveORexpression

   55 logicalORexpression: logicalANDexpression
   56                    | logicalORexpression N OR M logicalANDexpression

   57 M: %empty

   58 N: %empty

   59 conditionalExpression: logicalORexpression
   60                      | logicalORexpression N QUESTION M expression N COLON M conditionalExpression

   61 assignmentExpression: conditionalExpression
   62                     | unaryExpression assignment_operator assignmentExpression

   63 primaryExpression: IDENTIFIER
   64                  | constant
   65                  | STRING_LITERAL
   66                  | ROBRAOPEN expression ROBRACLOSE

   67 assignment_operator: ASSIGN
   68                    | STAREQ
   69                    | DIVEQ
   70                    | MODEQ
   71                    | PLUSEQ
   72                    | MINUSEQ
   73                    | SHLEQ
   74                    | SHREQ
   75                    | BINANDEQ
   76                    | BINXOREQ
   77                    | BINOREQ

   78 expression: assignmentExpression
   79           | expression COMMA assignmentExpression

   80 constant_expression: conditionalExpression

   81 declaration: declaration_specifiers InitDeclaratorList SEMICOLON
   82            | declaration_specifiers SEMICOLON

   83 InitDeclaratorList: initDeclarator
   84                   | InitDeclaratorList COMMA initDeclarator

   85 initDeclarator: declarator
   86               | declarator ASSIGN initializer

   87 storage_class_specifier: EXTERN
   88                        | STATIC
   89                        | AUTO
   90                        | REGISTER

   91 type_specifier: VOID
   92               | CHAR
   93               | SHORT
   94               | INT
   95               | LONG
   96               | FLOAT
   97               | DOUBLE
   98               | SIGNED
   99               | UNSIGNED
  100               | BOOL
  101               | COMPLEX
  102               | IMAGINARY
  103               | ENUMSpecifier

  104 SPecifierQualifierList: type_specifier SPecifierQualifierList
  105                       | type_specifier
  106                       | TYpeQualifier SPecifierQualifierList
  107                       | TYpeQualifier

  108 ENUMSpecifier: ENUM IDENTIFIER CURBRAOPEN ENumeratorList CURBRACLOSE
  109              | ENUM CURBRAOPEN ENumeratorList CURBRACLOSE
  110              | ENUM IDENTIFIER CURBRAOPEN ENumeratorList COMMA CURBRACLOSE
  111              | ENUM CURBRAOPEN ENumeratorList COMMA CURBRACLOSE
  112              | ENUM IDENTIFIER

  113 ENumeratorList: enumerator
  114               | ENumeratorList COMMA enumerator

  115 enumerator: IDENTIFIER
  116           | IDENTIFIER ASSIGN constant_expression

  117 TYpeQualifier: CONST
  118              | RESTRICT
  119              | VOLATILE

  120 functionSpecifier: INLINE

  121 declarator: pointer directDeclarator
  122           | directDeclarator

  123 directDeclarator: IDENTIFIER
  124                 | ROBRAOPEN declarator ROBRACLOSE
  125                 | directDeclarator SQBRAOPEN TYpeQualifier_list assignmentExpression SQBRACLOSE
  126                 | directDeclarator SQBRAOPEN TYpeQualifier_list SQBRACLOSE
  127                 | directDeclarator SQBRAOPEN assignmentExpression SQBRACLOSE
  128                 | directDeclarator SQBRAOPEN SQBRACLOSE
  129                 | directDeclarator SQBRAOPEN STATIC TYpeQualifier_list assignmentExpression SQBRACLOSE
  130                 | directDeclarator SQBRAOPEN STATIC assignmentExpression SQBRACLOSE
  131                 | directDeclarator SQBRAOPEN TYpeQualifier_list MUL SQBRACLOSE
  132                 | directDeclarator SQBRAOPEN MUL SQBRACLOSE
  133                 | directDeclarator ROBRAOPEN CT parameter_type_list ROBRACLOSE
  134                 | directDeclarator ROBRAOPEN identifier_list ROBRACLOSE
  135                 | directDeclarator ROBRAOPEN CT ROBRACLOSE

  136 CT: %empty

  137 pointer: MUL TYpeQualifier_list
  138        | MUL
  139        | MUL TYpeQualifier_list pointer
  140        | MUL pointer

  141 TYpeQualifier_list: TYpeQualifier
  142                   | TYpeQualifier_list TYpeQualifier

  143 argumentExpressionList: assignmentExpression
  144                       | argumentExpressionList COMMA assignmentExpression

  145 relationalExpression: shiftExpression
  146                     | relationalExpression BITSHL shiftExpression
  147                     | relationalExpression BITSHR shiftExpression
  148                     | relationalExpression LTE shiftExpression
  149                     | relationalExpression GTE shiftExpression

  150 unaryExpression: postfixExpression
  151                | INC unaryExpression
  152                | DEC unaryExpression
  153                | unaryOperator castExpression
  154                | SIZEOF unaryExpression
  155                | SIZEOF ROBRAOPEN type_name ROBRACLOSE

  156 parameter_type_list: parameter_list
  157                    | parameter_list COMMA DOTS

  158 parameter_list: parameter_declaration
  159               | parameter_list COMMA parameter_declaration

  160 parameter_declaration: declaration_specifiers declarator
  161                      | declaration_specifiers

  162 identifier_list: IDENTIFIER
  163                | identifier_list COMMA IDENTIFIER

  164 type_name: SPecifierQualifierList

  165 initializer: assignmentExpression
  166            | CURBRAOPEN initializer_list CURBRACLOSE
  167            | CURBRAOPEN initializer_list COMMA CURBRACLOSE

  168 initializer_list: designation initializer
  169                 | initializer
  170                 | initializer_list COMMA designation initializer
  171                 | initializer_list COMMA initializer

  172 designation: designator_list ASSIGN

  173 designator_list: designator
  174                | designator_list designator

  175 designator: SQBRAOPEN constant_expression SQBRACLOSE
  176           | DOT IDENTIFIER

  177 statement: labeledStatement
  178          | compoundStatement
  179          | expressionStatement
  180          | selectionStatement
  181          | iterationStatement
  182          | jumpStatement

  183 labeledStatement: IDENTIFIER COLON statement
  184                 | CASE constant_expression COLON statement
  185                 | DEFAULT COLON statement

  186 compoundStatement: CURBRAOPEN blockItemList CURBRACLOSE
  187                  | CURBRAOPEN CURBRACLOSE

  188 blockItemList: blockItem
  189              | blockItemList M blockItem

  190 blockItem: declaration
  191          | statement

  192 expressionStatement: expression SEMICOLON
  193                    | SEMICOLON

  194 iterationStatement: WHILE M ROBRAOPEN expression ROBRACLOSE M statement
  195                   | DO M statement M WHILE ROBRAOPEN expression ROBRACLOSE SEMICOLON
  196                   | FOR ROBRAOPEN expressionStatement M expressionStatement ROBRACLOSE M statement
  197                   | FOR ROBRAOPEN expressionStatement M expressionStatement M expression N ROBRACLOSE M statement

  198 jumpStatement: GOTO IDENTIFIER SEMICOLON
  199              | CONTINUE SEMICOLON
  200              | BREAK SEMICOLON
  201              | RETURN expression SEMICOLON
  202              | RETURN SEMICOLON

  203 translationUnit: external_declaration
  204                | translationUnit external_declaration

  205 external_declaration: function_definition
  206                     | declaration

  207 function_definition: declaration_specifiers declarator declaration_list CT compoundStatement
  208                    | declaration_specifiers declarator CT compoundStatement

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <symp> (258) 9 10 63 108 110 112 115 116 123 162 163 176 183 198
    AUTO (259) 89
    ENUM (260) 108 109 110 111 112
    RESTRICT (261) 118
    UNSIGNED (262) 99
    BREAK (263) 200
    EXTERN (264) 87
    RETURN (265) 201 202
    VOID (266) 91
    CASE (267) 184
    FLOAT (268) 96
    STRING_LITERAL <charval> (269) 65
    SHORT (270) 93
    VOLATILE (271) 119
    CHAR (272) 92
    FOR (273) 196 197
    SIGNED (274) 98
    WHILE (275) 194 195
    CONST (276) 117
    GOTO (277) 198
    SIZEOF (278) 154 155
    BOOL (279) 100
    CONTINUE (280) 199
    IF (281) 15 16
    STATIC (282) 88 129 130
    COMPLEX (283) 101
    DEFAULT (284) 185
    INLINE (285) 120
    STRUCT (286)
    IMAGINARY (287) 102
    DO (288) 195
    INT (289) 94
    SWITCH (290) 17
    DOUBLE (291) 97
    LONG (292) 95
    TYPEDEF (293)
    ELSE (294) 16
    REGISTER (295) 90
    UNION (296)
    CHARACTER_CONSTANT <charval> (297) 4
    ENUMERATION_CONSTANT <charval> (298) 3
    SQBRAOPEN (299) 6 125 126 127 128 129 130 131 132 175
    SQBRACLOSE (300) 6 125 126 127 128 129 130 131 132 175
    ROBRAOPEN (301) 7 8 13 14 15 16 17 25 66 124 133 134 135 155 194 195 196 197
    ROBRACLOSE (302) 7 8 13 14 15 16 17 25 66 124 133 134 135 155 194 195 196 197
    CURBRAOPEN (303) 13 14 108 109 110 111 166 167 186 187
    CURBRACLOSE (304) 13 14 108 109 110 111 166 167 186 187
    DOT (305) 9 176
    ACC (306) 10
    INC (307) 11 151
    DEC (308) 12 152
    AMP (309) 18 48
    MUL (310) 19 27 131 132 137 138 139 140
    ADD (311) 20 31
    SUB (312) 21 32
    NEG (313) 22
    EXCLAIM (314) 23
    DIV (315) 28
    MODULO (316) 29
    SHL (317) 34
    SHR (318) 35
    BITSHL (319) 146
    BITSHR (320) 147
    LTE (321) 148
    GTE (322) 149
    EQ (323) 45
    NEQ (324) 46
    BITXOR (325) 50
    BITOR (326) 52
    AND (327) 54
    floatingConstant <charval> (328) 2
    OR (329) 56
    QUESTION (330) 60
    COLON (331) 60 183 184 185
    SEMICOLON (332) 81 82 192 193 195 198 199 200 201 202
    DOTS (333) 157
    ASSIGN (334) 67 86 116 172
    STAREQ (335) 68
    DIVEQ (336) 69
    MODEQ (337) 70
    PLUSEQ (338) 71
    MINUSEQ (339) 72
    SHLEQ (340) 73
    SHREQ (341) 74
    BINANDEQ (342) 75
    BINXOREQ (343) 76
    BINOREQ (344) 77
    COMMA (345) 14 79 84 110 111 114 144 157 159 163 167 170 171
    HASH (346)
    integerConstant <intval> (347) 1
    THEN (348)


Nonterminals, with rules where they appear

    $accept (94)
        on left: 0
    constant <symp> (95)
        on left: 1 2 3 4
        on right: 64
    postfixExpression <A> (96)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 6 7 8 9 10 11 12 150
    selectionStatement <S> (97)
        on left: 15 16 17
        on right: 180
    unaryOperator <unaryOperator> (98)
        on left: 18 19 20 21 22 23
        on right: 153
    castExpression <A> (99)
        on left: 24 25
        on right: 25 26 27 28 29 153
    multiplicativeExpression <E> (100)
        on left: 26 27 28 29
        on right: 27 28 29 30 31 32
    additiveExpression <E> (101)
        on left: 30 31 32
        on right: 31 32 33 34 35
    shiftExpression <E> (102)
        on left: 33 34 35
        on right: 34 35 145 146 147 148 149
    declaration_specifiers (103)
        on left: 36 37 38 39 40 41 42 43
        on right: 36 38 40 42 81 82 160 161 207 208
    equalityExpression <E> (104)
        on left: 44 45 46
        on right: 45 46 47 48
    ANDexpression <E> (105)
        on left: 47 48
        on right: 48 49 50
    exclusiveORexpression <E> (106)
        on left: 49 50
        on right: 50 51 52
    inclusiveORexpression <E> (107)
        on left: 51 52
        on right: 52 53 54
    logicalANDexpression <E> (108)
        on left: 53 54
        on right: 54 55 56
    logicalORexpression <E> (109)
        on left: 55 56
        on right: 56 59 60
    M <instr> (110)
        on left: 57
        on right: 15 16 54 56 60 189 194 195 196 197
    N <S> (111)
        on left: 58
        on right: 15 16 54 56 60 197
    conditionalExpression <E> (112)
        on left: 59 60
        on right: 60 61 80
    assignmentExpression <E> (113)
        on left: 61 62
        on right: 62 78 79 125 127 129 130 143 144 165
    primaryExpression <E> (114)
        on left: 63 64 65 66
        on right: 5
    assignment_operator (115)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 62
    expression <E> (116)
        on left: 78 79
        on right: 6 15 16 17 60 66 79 192 194 195 197 201
    constant_expression (117)
        on left: 80
        on right: 116 175 184
    declaration (118)
        on left: 81 82
        on right: 190 206 209 210
    InitDeclaratorList (119)
        on left: 83 84
        on right: 81 84
    initDeclarator <symp> (120)
        on left: 85 86
        on right: 83 84
    storage_class_specifier (121)
        on left: 87 88 89 90
        on right: 36 37
    type_specifier (122)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103
        on right: 38 39 104 105
    SPecifierQualifierList (123)
        on left: 104 105 106 107
        on right: 104 106 164
    ENUMSpecifier (124)
        on left: 108 109 110 111 112
        on right: 103
    ENumeratorList (125)
        on left: 113 114
        on right: 108 109 110 111 114
    enumerator (126)
        on left: 115 116
        on right: 113 114
    TYpeQualifier (127)
        on left: 117 118 119
        on right: 40 41 106 107 141 142
    functionSpecifier (128)
        on left: 120
        on right: 42 43
    declarator <symp> (129)
        on left: 121 122
        on right: 85 86 124 160 207 208
    directDeclarator <symp> (130)
        on left: 123 124 125 126 127 128 129 130 131 132 133 134 135
        on right: 121 122 125 126 127 128 129 130 131 132 133 134 135
    CT (131)
        on left: 136
        on right: 133 135 207 208
    pointer <symtp> (132)
        on left: 137 138 139 140
        on right: 121 139 140
    TYpeQualifier_list (133)
        on left: 141 142
        on right: 125 126 129 131 137 139 142
    argumentExpressionList <intval> (134)
        on left: 143 144
        on right: 8 144
    relationalExpression <E> (135)
        on left: 145 146 147 148 149
        on right: 44 45 46 146 147 148 149
    unaryExpression <A> (136)
        on left: 150 151 152 153 154 155
        on right: 24 62 151 152 154
    parameter_type_list (137)
        on left: 156 157
        on right: 133
    parameter_list (138)
        on left: 158 159
        on right: 156 157 159
    parameter_declaration (139)
        on left: 160 161
        on right: 158 159
    identifier_list (140)
        on left: 162 163
        on right: 134 163
    type_name (141)
        on left: 164
        on right: 13 14 25 155
    initializer <symp> (142)
        on left: 165 166 167
        on right: 86 168 169 170 171
    initializer_list (143)
        on left: 168 169 170 171
        on right: 13 14 166 167 170 171
    designation (144)
        on left: 172
        on right: 168 170
    designator_list (145)
        on left: 173 174
        on right: 172 174
    designator (146)
        on left: 175 176
        on right: 173 174
    statement <S> (147)
        on left: 177 178 179 180 181 182
        on right: 15 16 17 183 184 185 191 194 195 196 197
    labeledStatement <S> (148)
        on left: 183 184 185
        on right: 177
    compoundStatement <S> (149)
        on left: 186 187
        on right: 178 207 208
    blockItemList <S> (150)
        on left: 188 189
        on right: 186 189
    blockItem <S> (151)
        on left: 190 191
        on right: 188 189
    expressionStatement <E> (152)
        on left: 192 193
        on right: 179 196 197
    iterationStatement <S> (153)
        on left: 194 195 196 197
        on right: 181
    jumpStatement <S> (154)
        on left: 198 199 200 201 202
        on right: 182
    translationUnit (155)
        on left: 203 204
        on right: 0 204
    external_declaration (156)
        on left: 205 206
        on right: 203 204
    function_definition (157)
        on left: 207 208
        on right: 205
    declaration_list (158)
        on left: 209 210
        on right: 207 210


State 0

    0 $accept: . translationUnit $end

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration_specifiers   go to state 22
    declaration              go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28
    translationUnit          go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   89 storage_class_specifier: AUTO .

    $default  reduce using rule 89 (storage_class_specifier)


State 2

  108 ENUMSpecifier: ENUM . IDENTIFIER CURBRAOPEN ENumeratorList CURBRACLOSE
  109              | ENUM . CURBRAOPEN ENumeratorList CURBRACLOSE
  110              | ENUM . IDENTIFIER CURBRAOPEN ENumeratorList COMMA CURBRACLOSE
  111              | ENUM . CURBRAOPEN ENumeratorList COMMA CURBRACLOSE
  112              | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32
    CURBRAOPEN  shift, and go to state 33


State 3

  118 TYpeQualifier: RESTRICT .

    $default  reduce using rule 118 (TYpeQualifier)


State 4

   99 type_specifier: UNSIGNED .

    $default  reduce using rule 99 (type_specifier)


State 5

   87 storage_class_specifier: EXTERN .

    $default  reduce using rule 87 (storage_class_specifier)


State 6

   91 type_specifier: VOID .

    $default  reduce using rule 91 (type_specifier)


State 7

   96 type_specifier: FLOAT .

    $default  reduce using rule 96 (type_specifier)


State 8

   93 type_specifier: SHORT .

    $default  reduce using rule 93 (type_specifier)


State 9

  119 TYpeQualifier: VOLATILE .

    $default  reduce using rule 119 (TYpeQualifier)


State 10

   92 type_specifier: CHAR .

    $default  reduce using rule 92 (type_specifier)


State 11

   98 type_specifier: SIGNED .

    $default  reduce using rule 98 (type_specifier)


State 12

  117 TYpeQualifier: CONST .

    $default  reduce using rule 117 (TYpeQualifier)


State 13

  100 type_specifier: BOOL .

    $default  reduce using rule 100 (type_specifier)


State 14

   88 storage_class_specifier: STATIC .

    $default  reduce using rule 88 (storage_class_specifier)


State 15

  101 type_specifier: COMPLEX .

    $default  reduce using rule 101 (type_specifier)


State 16

  120 functionSpecifier: INLINE .

    $default  reduce using rule 120 (functionSpecifier)


State 17

  102 type_specifier: IMAGINARY .

    $default  reduce using rule 102 (type_specifier)


State 18

   94 type_specifier: INT .

    $default  reduce using rule 94 (type_specifier)


State 19

   97 type_specifier: DOUBLE .

    $default  reduce using rule 97 (type_specifier)


State 20

   95 type_specifier: LONG .

    $default  reduce using rule 95 (type_specifier)


State 21

   90 storage_class_specifier: REGISTER .

    $default  reduce using rule 90 (storage_class_specifier)


State 22

   81 declaration: declaration_specifiers . InitDeclaratorList SEMICOLON
   82            | declaration_specifiers . SEMICOLON
  207 function_definition: declaration_specifiers . declarator declaration_list CT compoundStatement
  208                    | declaration_specifiers . declarator CT compoundStatement

    IDENTIFIER  shift, and go to state 34
    ROBRAOPEN   shift, and go to state 35
    MUL         shift, and go to state 36
    SEMICOLON   shift, and go to state 37

    InitDeclaratorList  go to state 38
    initDeclarator      go to state 39
    declarator          go to state 40
    directDeclarator    go to state 41
    pointer             go to state 42


State 23

  206 external_declaration: declaration .

    $default  reduce using rule 206 (external_declaration)


State 24

   36 declaration_specifiers: storage_class_specifier . declaration_specifiers
   37                       | storage_class_specifier .

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 37 (declaration_specifiers)

    declaration_specifiers   go to state 43
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28


State 25

   38 declaration_specifiers: type_specifier . declaration_specifiers
   39                       | type_specifier .

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 39 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28


State 26

  103 type_specifier: ENUMSpecifier .

    $default  reduce using rule 103 (type_specifier)


State 27

   40 declaration_specifiers: TYpeQualifier . declaration_specifiers
   41                       | TYpeQualifier .

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 41 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28


State 28

   42 declaration_specifiers: functionSpecifier . declaration_specifiers
   43                       | functionSpecifier .

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    $default  reduce using rule 43 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28


State 29

    0 $accept: translationUnit . $end
  204 translationUnit: translationUnit . external_declaration

    $end       shift, and go to state 47
    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21

    declaration_specifiers   go to state 22
    declaration              go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28
    external_declaration     go to state 48
    function_definition      go to state 31


State 30

  203 translationUnit: external_declaration .

    $default  reduce using rule 203 (translationUnit)


State 31

  205 external_declaration: function_definition .

    $default  reduce using rule 205 (external_declaration)


State 32

  108 ENUMSpecifier: ENUM IDENTIFIER . CURBRAOPEN ENumeratorList CURBRACLOSE
  110              | ENUM IDENTIFIER . CURBRAOPEN ENumeratorList COMMA CURBRACLOSE
  112              | ENUM IDENTIFIER .

    CURBRAOPEN  shift, and go to state 49

    $default  reduce using rule 112 (ENUMSpecifier)


State 33

  109 ENUMSpecifier: ENUM CURBRAOPEN . ENumeratorList CURBRACLOSE
  111              | ENUM CURBRAOPEN . ENumeratorList COMMA CURBRACLOSE

    IDENTIFIER  shift, and go to state 50

    ENumeratorList  go to state 51
    enumerator      go to state 52


State 34

  123 directDeclarator: IDENTIFIER .

    $default  reduce using rule 123 (directDeclarator)


State 35

  124 directDeclarator: ROBRAOPEN . declarator ROBRACLOSE

    IDENTIFIER  shift, and go to state 34
    ROBRAOPEN   shift, and go to state 35
    MUL         shift, and go to state 36

    declarator        go to state 53
    directDeclarator  go to state 41
    pointer           go to state 42


State 36

  137 pointer: MUL . TYpeQualifier_list
  138        | MUL .
  139        | MUL . TYpeQualifier_list pointer
  140        | MUL . pointer

    RESTRICT  shift, and go to state 3
    VOLATILE  shift, and go to state 9
    CONST     shift, and go to state 12
    MUL       shift, and go to state 36

    $default  reduce using rule 138 (pointer)

    TYpeQualifier       go to state 54
    pointer             go to state 55
    TYpeQualifier_list  go to state 56


State 37

   82 declaration: declaration_specifiers SEMICOLON .

    $default  reduce using rule 82 (declaration)


State 38

   81 declaration: declaration_specifiers InitDeclaratorList . SEMICOLON
   84 InitDeclaratorList: InitDeclaratorList . COMMA initDeclarator

    SEMICOLON  shift, and go to state 57
    COMMA      shift, and go to state 58


State 39

   83 InitDeclaratorList: initDeclarator .

    $default  reduce using rule 83 (InitDeclaratorList)


State 40

   85 initDeclarator: declarator .
   86               | declarator . ASSIGN initializer
  207 function_definition: declaration_specifiers declarator . declaration_list CT compoundStatement
  208                    | declaration_specifiers declarator . CT compoundStatement

    AUTO       shift, and go to state 1
    ENUM       shift, and go to state 2
    RESTRICT   shift, and go to state 3
    UNSIGNED   shift, and go to state 4
    EXTERN     shift, and go to state 5
    VOID       shift, and go to state 6
    FLOAT      shift, and go to state 7
    SHORT      shift, and go to state 8
    VOLATILE   shift, and go to state 9
    CHAR       shift, and go to state 10
    SIGNED     shift, and go to state 11
    CONST      shift, and go to state 12
    BOOL       shift, and go to state 13
    STATIC     shift, and go to state 14
    COMPLEX    shift, and go to state 15
    INLINE     shift, and go to state 16
    IMAGINARY  shift, and go to state 17
    INT        shift, and go to state 18
    DOUBLE     shift, and go to state 19
    LONG       shift, and go to state 20
    REGISTER   shift, and go to state 21
    ASSIGN     shift, and go to state 59

    CURBRAOPEN  reduce using rule 136 (CT)
    $default    reduce using rule 85 (initDeclarator)

    declaration_specifiers   go to state 60
    declaration              go to state 61
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    ENUMSpecifier            go to state 26
    TYpeQualifier            go to state 27
    functionSpecifier        go to state 28
    CT                       go to state 62
    declaration_list         go to state 63


State 41

  122 declarator: directDeclarator .
  125 directDeclarator: directDeclarator . SQBRAOPEN TYpeQualifier_list assignmentExpression SQBRACLOSE
  126                 | directDeclarator . SQBRAOPEN TYpeQualifier_list SQBRACLOSE
  127                 | directDeclarator . SQBRAOPEN assignmentExpression SQBRACLOSE
  128                 | directDeclarator . SQBRAOPEN SQBRACLOSE
  129                 | directDeclarator . SQBRAOPEN STATIC TYpeQualifier_list assignmentExpression SQBRACLOSE
  130                 | directDeclarator . SQBRAOPEN STATIC assignmentExpression SQBRACLOSE
  131                 | directDeclarator . SQBRAOPEN TYpeQualifier_list MUL SQBRACLOSE
  132                 | directDeclarator . SQBRAOPEN MUL SQBRACLOSE
  133                 | directDeclarator . ROBRAOPEN CT parameter_type_list ROBRACLOSE
  134                 | directDeclarator . ROBRAOPEN identifier_list ROBRACLOSE
  135                 | directDeclarator . ROBRAOPEN CT ROBRACLOSE

    SQBRAOPEN  shift, and go to state 64
    ROBRAOPEN  shift, and go to state 65

    $default  reduce using rule 122 (declarator)


State 42

  121 declarator: pointer . directDeclarator
